--- a/solution/package.json
+++ b/solution/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.3.0",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
