--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize, reopened, closed]
     branches:
       - main
 
@@ -25,7 +24,5 @@ jobs:
       - run: npm run build
         working-directory: solution
       - name: Deploy to GitHub Pages
-        run: npm run deploy
+        run: GH_TOKEN=${{ secrets.GITHUB_TOKEN }} npm run deploy
         working-directory: solution
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
