--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -23,6 +23,12 @@ jobs:
         working-directory: solution
       - run: npm run build
         working-directory: solution
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
       - name: Deploy to GitHub Pages
-        run: GH_TOKEN=${{ secrets.GITHUB_TOKEN }} npm run deploy
+        run: npm run deploy
         working-directory: solution
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
