--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -28,7 +28,5 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
       - name: Deploy to GitHub Pages
-        run: npm run deploy
+        run: GH_TOKEN=${{ secrets.GITHUB_TOKEN }} npm run deploy
         working-directory: solution
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
