--- a/solution/package.json
+++ b/solution/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "GH_TOKEN=${GH_TOKEN} gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
