--- a/solution/package.json
+++ b/solution/package.json
@@ -1,6 +1,7 @@
 {
   "name": "solution",
   "version": "0.1.0",
+  "homepage": "https://robwillup.github.io/interview-exercise-frontend-main",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -28,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "GH_TOKEN=${GH_TOKEN} gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,5 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.1.1"
-  },
-  "homepage": "https://robwillup.github.io/interview-exercise-frontend-main"
+  }
 }
