--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -20,13 +20,11 @@ jobs:
         with:
           node-version: '16.x'
       - run: npm install
-        working-directory: solution
       - run: npm run build
-        working-directory: solution
       - name: Configure Git
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git remote add origin https://github.com/robwillup/interview-exercise-frontend-main.git
+          git config --global user.name "Rob Will"
+          git config --global user.email "robwillup@outlook.com"
       - name: Deploy to GitHub Pages
-        run: GH_TOKEN=${{ secrets.GITHUB_TOKEN }} npm run deploy
-        working-directory: solution
+        run: npm run deploy
