--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -21,9 +21,7 @@ jobs:
         with:
           node-version: '16.x'
       - run: npm install
-        working-directory: solution
       - run: npm run build
-        working-directory: solution
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
@@ -31,7 +29,7 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "/solution"
+          app_location: "/"
           api_location: ""
           output_location: "build"
 
