--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.108",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "framer-motion": "^11.5.4",
@@ -26,10 +24,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "test": "vitest --run",
+    "test:watch": "vitest --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +50,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.1.1"
+    "@testing-library/jest-dom": "^6.5.0",
+    "@types/node": "^18.19.50",
+    "gh-pages": "^6.1.1",
+    "jsdom": "^25.0.1",
+    "vitest": "^2.1.1"
   }
 }
