--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -22,6 +22,7 @@ jobs:
           node-version: '16.x'
       - run: npm install
       - run: npm run build
+      - run: npm run test
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
